[tool.isort]
profile = "black"
src_paths = ["new_component", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.poetry]
name = "new-component"
version = "0.3.0"
description = "Quickly create opinionated Styled Components for React Projects"
authors = ["Ian Cleary <contact@iancleary.me>"]
license = "MIT"
homepage = "https://github.com/iancleary/new-component"
readme = "README.md"
include = ["new_component/py.typed"]

[tool.poetry.scripts]
new-component = "new_component.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
colorama = "^0.4.4"
shellingham = "^1.4.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "^5.6"
mkdocs-material = "^8"
mypy = ">0.900,<1"
pre-commit = "^2.8"
pytest = "^6.2"
pytest-cov = "^3"
pytest-mock = "^3.3"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
