[project]
name = "new-component"
version = "0.4.2"
description = "Quickly create opinionated Styled Components for React Projects"
authors = [
    {name = "Ian Cleary", email = "github@iancleary.me"},
]
requires-python = ">=3.8"
license = {text = "MIT"}

readme = "README.md"

dependencies = [
    "typer==0.9.0",
    "colorama==0.4.6",
    "shellingham==1.5.0.post1",
    "rich==13.3.5",
    "Jinja2==3.1.2"
]

[project.urls]
Homepage = "https://new-component.iancleary.me"
Repository = "https://github.com/iancleary/new-component"
Documentation = "https://new-component.iancleary.me"

[project.scripts]
new-component = "new_component.__main__.py:main"

[tool.pdm.version]
source = "scm"
write_to = "new_component/__version__.py"
write_template = "__version__ = '{}'"  # optional, default to "{}"

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["new_component"]
source-includes = ["LICENSE", "README.md"]
# editables backend doesn't work well with namespace packages
editable-backend = "path"

[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.0",
    "black==22.10.0",
    "mypy==0.990",
    "ruff==0.0.225",
    "pytest-pretty==1.2.0",
    "isort==5.12.0",
]

[tool.isort]
src_paths = ["new_component", "tests"]
force_single_line = true
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.autoflake]
remove-all-unused-imports = true
recursive = true
remove-unused-variables = true
in-place = true
expand-star-imports = true
exclude = "__init__.py"
remove-duplicate-keys = true

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["TID2", "E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs"
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ['docs/']

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
